<resources>
    <string name="app_name">TacoTuesday</string>
    <string name="taco_tuesday">Taco Tuesday</string>
    <string name="Chicken">chicken</string>
    <string name="Steak">steak</string>
    <string name="Vegetarian">vegetarian</string>
    <string name="createTaco">Create Taco</string>
    <string name="guacamole">Guacamole</string>
    <string name="cheese">Cheese</string>
    <string name="pico">Pico</string>
    <string name="sourCream">Sour Cream</string>
    <string name="glutenFree">Gluten Free</string>
    <string name="locationButton">Find Tacos</string>
    <string-array name="location">
        <item>Select Location</item>
        <item>the Hill</item>
        <item>29th St.</item>
        <item>Pearl St.</item>
    </string-array>
    <string name="title_activity_taco_location">TacoLocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">"Feedback "</string>
</resources>